fixed contact id

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         </a>
       </nav>
       
-      <nav class="header_button">
+      <nav class="header_button" id="current_page">
         <a href="contact.html">
           Kontakt
         </a>
